RESOLVED FIXED78683
REGRESSION(r107518): DeviceOrientationController doesn't remove registered DOMWindows
https://bugs.webkit.org/show_bug.cgi?id=78683
Summary REGRESSION(r107518): DeviceOrientationController doesn't remove registered DO...
Hajime Morrita
Reported 2012-02-15 01:40:14 PST
Attachments
Patch (3.15 KB, patch)
2012-02-15 02:21 PST, Hajime Morrita
no flags
Patch for landing (3.15 KB, patch)
2012-02-15 02:30 PST, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2012-02-15 02:21:57 PST
Hajime Morrita
Comment 2 2012-02-15 02:22:29 PST
Haraken, could you rs?
Kentaro Hara
Comment 3 2012-02-15 02:26:22 PST
Comment on attachment 127140 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127140&action=review r=me > Source/WebCore/ChangeLog:8 > + A copy-n-paste disaster. This change fixed it by calling correct mehtods. Nit: mehtods => methods
Hajime Morrita
Comment 4 2012-02-15 02:30:20 PST
Created attachment 127141 [details] Patch for landing
Hajime Morrita
Comment 5 2012-02-15 02:30:42 PST
(In reply to comment #3) > (From update of attachment 127140 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=127140&action=review > > r=me > > > Source/WebCore/ChangeLog:8 > > + A copy-n-paste disaster. This change fixed it by calling correct mehtods. > > Nit: mehtods => methods Good catch! Fixed.
WebKit Review Bot
Comment 6 2012-02-15 03:37:41 PST
Comment on attachment 127141 [details] Patch for landing Clearing flags on attachment: 127141 Committed r107799: <http://trac.webkit.org/changeset/107799>
WebKit Review Bot
Comment 7 2012-02-15 03:37:46 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 8 2012-02-15 04:09:18 PST
Attachment 127140 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource Index mismatch: 0dfd183742a71cb5de5dadc3ae177fc72b63a194 != 9cdcda984def14b8bf8a32b6da6784c8a6ef7b3a rereading 8567f8d3c2539a28a496edaf1048483e973975c2 M LayoutTests/fast/forms/radio-nested-labels.html M LayoutTests/ChangeLog 107798 = 3671b2d23de7ade4cb1d1e78a3f6f7673db6a6c9 already exists! Why are we refetching it? at /usr/lib/git-core/git-svn line 5210 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
Note You need to log in before you can comment on or make changes to this bug.