REGRESSION(r107518): DeviceOrientationController doesn't remove registered DOMWindows https://bugs.webkit.org/show_bug.cgi?id=78683

Patch by Hajime Morrita <morrita@chromium.org> on 2012-02-15
Reviewed by Kentaro Hara.

A copy-n-paste disaster. This change fixed it by calling correct methods.

No new tests. Needs browser side mocking for testing this.
A Chromium automated test covers this.

* page/DOMWindow.cpp:
(WebCore::DOMWindow::removeAllEventListeners):
* page/Page.cpp:
(WebCore::Page::provideSupplement):
(WebCore::Page::requireSupplement):
* page/Page.h: Fix typo.
(Page):

Canonical link: https://commits.webkit.org/95641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107799 268f45cc-cd09-0410-ab3c-d52691b4dbfc