Source/WebCore/page/Page.cpp
@@ -1087,13 +1087,13 @@ void Page::addRelevantRepaintedObject(RenderObject* object, const IntRect& objec
 
 void Page::provideSupplement(const AtomicString& name, PassOwnPtr<PageSupplement> supplement)
 {
-    ASSERT(!m_suppliments.get(name.impl()));
-    m_suppliments.set(name.impl(), supplement);
+    ASSERT(!m_supplements.get(name.impl()));
+    m_supplements.set(name.impl(), supplement);
 }
 
 PageSupplement* Page::requireSupplement(const AtomicString& name)
 {
-    return m_suppliments.get(name.impl());
+    return m_supplements.get(name.impl());
 }
 
 Page::PageClients::PageClients()
